Release Notes
=============
==== Post Jena 2.4

Assembler:
    o missing subclass declarations added to vocabulary. Bogus `domain`
      replaced by correct `range`. FileManagerAssembler now by default
      builds a FileManager with the standard locators. To test this,
      made the existing standard locator classes have appropriate
      .equals() and .hashCode() methods.

RDF/XML output:
    o bug whereby a literal containing the sequence "]]>" generated illegal
      XML (because the "]]>" went through unchanged, and is illegal except
      as CDATA end) fixed by converting any ">" in element content into
      "&gt;". 
      
    o unencodable characters (any control character except \n, \t, \r) now
      throw exceptions. We may allow a new parameter setting to switch this
      off later.
      
    o the entity-conversion code has been rewritten using Java regex's to
      avoid multiple conversions.

    o the new Writer property "showDoctypeDeclaration" is used by the RDF/XML
      writers to force inclusion of a !DOCTYPE header declaring as entities
      each of the prefix-mappings of the model. Attributes that start with
      the URIs of the mapping are written to use the entity invocation
      instead.

Untyped literal operations deprecated (char, boolean, long, float, double, Object)
     These operations do not work on typed literals.  They converted their arguments
     to plain strings and parsed strings to retrive values.  
     They are a ghost from pre-datatyping RDF.
     ** The forms on RDFNode, String, String+lang, and XML literals remain.
     ** Forms taking a typed literal or a lexical form and RDF datatype added (or already exist).
     Model:      .add, .listStatements, .listSubjectsWithProperty
     Resource:   .hasProperty, .addProperty
	
JAR file changes:
    Added:    arq-extra.jar
    Changed:  wstx-asl-2.8.jar ==> wstx-asl-3.0.0.jar

EnhNodes/UnsupportedPolymorhismException/QualifiedRestriction