@@ -2,6 +2,15 @@ Release Notes
 =============
 ==== Post Jena 2.4
 
+ModelFactory:
+    o added methods to construct models using Assembler system. Updated
+      ModelFactory howto to include them. Deprecated the ModelSpec
+      methods. Removed them from ModelFactory howto.
+
+ModelSpec:
+    o deprecated the ModelSpec class. Modified the ModelSpec docs to
+      say it's deprecated.
+    
 Assembler:
     o missing subclass declarations added to vocabulary. Bogus `domain`
       replaced by correct `range`. FileManagerAssembler now by default
